增加了测试用例AwardingExpertServiceTest，测试可以正常调用其它模块的基础代码

--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,11 @@
 				<artifactId>awarding-account-service</artifactId>
 				<version>${awarding-account-parent.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>awarding-project-service</artifactId>
+				<version>${awarding-project-parent.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<build>
