增加了awarding-expert-web模块和awarding-expert-web-dist模块

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.chinaunicom</groupId>
 	<artifactId>awarding-expert-parent</artifactId>
@@ -10,7 +9,9 @@
 	<modules>
 		<module>awarding-expert-persist</module>
 		<module>awarding-expert-service</module>
-	</modules>
+    <module>awarding-expert-web</module>
+    <module>awarding-expert-web-dist</module>
+  </modules>
 	<properties>
 		<springframework.version>3.2.4.RELEASE</springframework.version>
 		<junit.version>4.7</junit.version>
