--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.chinaunicom</groupId>
 	<artifactId>awarding-expert-parent</artifactId>
@@ -9,14 +10,15 @@
 	<modules>
 		<module>awarding-expert-persist</module>
 		<module>awarding-expert-service</module>
-    <module>awarding-expert-web</module>
-    <module>awarding-expert-web-dist</module>
-  </modules>
+		
+		
+		<module>awarding-expert-web</module>
+		<module>awarding-expert-web-dist</module>
+	</modules>
 	<properties>
 		<springframework.version>3.2.4.RELEASE</springframework.version>
 		<junit.version>4.7</junit.version>
 		<mirage-util.version>1.4.3</mirage-util.version>
-		<mybatisPlugin.version>1.3.0</mybatisPlugin.version>
 		<dbcp.version>1.4</dbcp.version>
 		<mybatis-spring.version>1.2.2</mybatis-spring.version>
 		<cglib.version>2.2.2</cglib.version>
@@ -35,6 +37,7 @@
 		<mybatis-by-limeng32.version>3.2.5.0</mybatis-by-limeng32.version>
 		<awarding-core-parent.version>0.0.1-SNAPSHOT</awarding-core-parent.version>
 		<fileupload.version>1.3.1</fileupload.version>
+		<mybatis.flying.version>0.1.1</mybatis.flying.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -74,17 +77,6 @@
 				<groupId>limeng32.mirage</groupId>
 				<artifactId>mirage-util</artifactId>
 				<version>${mirage-util.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>limeng32.mybatis</groupId>
-				<artifactId>mybatisPlugin</artifactId>
-				<version>${mybatisPlugin.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.mybatis</groupId>
-						<artifactId>mybatis</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>commons-dbcp</groupId>
@@ -284,6 +276,17 @@
 				<groupId>${project.groupId}</groupId>
 				<artifactId>awarding-project-service</artifactId>
 				<version>${awarding-project-parent.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>indi.mybatis</groupId>
+				<artifactId>mybatis.flying</artifactId>
+				<version>${mybatis.flying.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.mybatis</groupId>
+						<artifactId>mybatis</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
