解决awarding-expert-*中的rds依赖问题

--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	<modules>
 		<module>awarding-expert-persist</module>
 		<module>awarding-expert-service</module>
-		
-		
+
+
 		<module>awarding-expert-web</module>
 		<module>awarding-expert-web-dist</module>
 	</modules>
@@ -38,6 +38,7 @@
 		<awarding-core-parent.version>0.0.1-SNAPSHOT</awarding-core-parent.version>
 		<fileupload.version>1.3.1</fileupload.version>
 		<mybatis.flying.version>0.7.0</mybatis.flying.version>
+		<h2database.version>1.3.176</h2database.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -287,6 +288,12 @@
 						<artifactId>mybatis</artifactId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<version>${h2database.version}</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
