--- a/awarding-expert-persist/pom.xml
+++ b/awarding-expert-persist/pom.xml
@@ -126,5 +126,9 @@
 			<artifactId>awarding-project-service</artifactId>
 			<version>${awarding-project-parent.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 	</dependencies>
 </project>
