--- a/awarding-expert-service/pom.xml
+++ b/awarding-expert-service/pom.xml
@@ -77,5 +77,9 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>awarding-project-service</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
 	</dependencies>
 </project>
